--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -5,7 +5,11 @@ nav {
   background-color: #4056A1;
   color: #FFFFFF;
   justify-content: space-between;
+  z-index: -1;
+  position: relative;
 }
+
+
 
 span {
   display: flex;
