--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,18 +1,32 @@
 .new-tweet {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .new-tweet form {
+  width: 100%;
   display: flex;
   flex-direction: column;
+}
+
+.new-tweet form textarea{
+  height: 80px;
+  background-color: #f4f1ec;
+  border: none;
+  border-bottom: 2px solid black;
+  margin-bottom: 10px;
 }
 
 .new-tweet div {
   font-family: 'Bungee', sans-serif;
   display: flex;
   justify-content: space-between;
-  border-top: 20px black;
+}
+
+.new-tweet div button{
+  background-color: #4056A1;
+  color: white;
 }
 
