--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -32,7 +32,8 @@ body {
 
 .container {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   width: 90%;
 }
 
