--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -2,6 +2,7 @@
   display: flex;
   height: 400px;
   width: 100%;
+  margin-top: 120px;
   background-color: yellowgreen;
   justify-content: center;
   align-items: center;
