--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,12 +1,12 @@
 nav {
   display: flex;
   height: 120px;
-  width: 100vw;
   background-color: #4056A1;
   color: #FFFFFF;
   justify-content: space-between;
-  z-index: -1;
-  position: relative;
+  position: fixed;
+  top: 0;
+  width: 100vw;
 }
 
 
