--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -2,7 +2,7 @@
   display: flex;
   height: 400px;
   width: 100%;
-  margin-top: 120px;
+  margin: 1em;
   background-color: yellowgreen;
   justify-content: center;
   align-items: center;
@@ -10,3 +10,9 @@
   background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png");
 }
 
+@media screen and (min-width: 768px) {
+  .profile{
+    width: 50%;
+  }
+
+}
