--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -30,16 +30,42 @@ body {
   align-items: center;
 }
 
+.content {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 120px;
+}
+
 .container {
   display: flex;
   align-items: center;
   flex-direction: column;
   width: 90%;
+  margin: 1em;
+
 }
 
 .error {
   background-color: red;
   color: #f4f1ec;
-  /* border-radius: 10px; */
   padding: 0.5em;
+}
+
+
+@media screen and (min-width: 768px) {
+  body {
+    overflow: hidden;
+  }
+  .content{
+    height: calc(100vh - 120px);
+    flex-direction: row;
+    align-items: flex-start;
+  }
+
+}
+
+@media screen and (min-width: 1024px){
+  
 }
